b=418294; MacOS X - text in pop-up <select>s is not vertically centered (1px too low); r=josh,sr=stuart